02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myex
  labels:
    name: myex
spec:
  rules:
  - host: hello-world.info
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              number: 8080
